# e-cli

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: build-release.yml  build.yml  rust.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/e_cli/: all.html  fn.main.html  index.html  sidebar-items.js
docs/e_cli/cli/: enum.Commands.html  index.html  struct.Args.html
docs/e_cli/commands/: fn.download_favourites.html  fn.download_post.html  fn.download_posts_from_file.html  fn.download_posts_from_txt.html  fn.fetch_posts.html  index.html  sidebar-items.js
docs/e_cli/funcs/: fn.create_dl_dir.html  fn.debug_response_file.html  fn.download.html  fn.lower_quality_dl.html  fn.parse_artists.html  index.html
docs/e_cli/type_defs/: index.html
docs/e_tools/: all.html  fn.main.html  index.html
docs/e_tools/cli/: enum.Commands.html  index.html  struct.Args.html
docs/e_tools/commands/: fn.download_favourites.html  fn.download_post.html  fn.download_posts_from_file.html  fn.download_posts_from_txt.html  fn.fetch_posts.html  index.html  sidebar-items.js
docs/e_tools/funcs/: fn.create_dl_dir.html  fn.debug_response_file.html  fn.download.html  fn.lower_quality_dl.html  fn.parse_artists.html  index.html  sidebar-items.js
docs/e_tools/type_defs/: index.html  sidebar-items.js
docs/src/e_cli/: cli.rs.html  commands.rs.html  funcs.rs.html  main.rs.html  type_defs.rs.html
docs_markdown/: main.md
src/: cli.rs  commands.rs  funcs.rs  main.rs  type_defs.rs
src/type_defs/: api_defs.rs
(+41 files in other folders)
