[package]
name = "e-cli"
version = "0.3.1"
authors = ["Saniee"]
repository = "https://git.saniee.dev/Saniee/e-cli"
edition = "2024"


[dependencies]
rayon = "1.10.0"
ureq = { version = "^3.0.12", features = ["json"] }
clap = { version = "^4.5.4", features = ["derive"] }
serde = { version = "^1.0.200", features = ["derive"] }
serde_json = "^1.0.116"
