[package]
name = "e-cli"
version = "0.3.1"
authors = ["Saniee"]
repository = "https://git.saniee.dev/Saniee/e-cli"
edition = "2024"


[dependencies]
rayon = "1.10.0"
clap = { version = "^4.5.4", features = ["derive"] }
serde = { version = "^1.0.200", features = ["derive"] }
serde_json = "^1.0.116"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
