[package]
name = "e-cli"
version = "0.4.2"
authors = ["Saniee"]
repository = "https://git.saniee.dev/Saniee/e-cli"
edition = "2024"

[dependencies]
rayon = "^1.11.0"
tracing-subscriber = {version = "^0.3.20", features = ["json", "env-filter"]}
tracing = "^0.1.41"
clap = { version = "^4.5.51", features = ["derive"] }
serde = { version = "^1.0.200", features = ["derive"] }
serde_json = "^1.0.145"
reqwest = { version = "^0.12.24", features = ["blocking", "json"] }
openssl = { version = "0.10.74", features = ["vendored"] }
